Mark icon buttons as non-selectable to try and prevent copy dialog on mobile.

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -1202,3 +1202,13 @@ div.v-subheader {
 .transparent {
  opacity:0;
 }
+
+/* Long press on buttons sometimes causes select? */
+.v-btn--icon, .v-btn__content, .v-btn__content i {
+ -webkit-touch-callout:none;
+ -webkit-user-select:none;
+ -khtml-user-select:none;
+ -moz-user-select:none;
+ -ms-user-select:none;
+ user-select:none;
+}
